# zuultimate

./: .env.example  .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d28ee951fea7_initial_schema.py  v1_0_0_hardening.py  v1_1_0_saas_columns.py  v2_0_0_phase2_identity.py
config/: default.yaml
docs/: PHASE2_IDENTITY_DESIGN.md
docs/pricing/: index.html
src/zuultimate/: __init__.py  app.py  cli.py  deps.py
src/zuultimate/access/: __init__.py  models.py  (+3 more)
tests/: conftest.py
tests/integration/: conftest.py  test_access_router.py  test_ai_security_router.py  test_backup_router.py  test_crm_router.py  test_email_verification.py  test_health.py  test_idempotency.py  test_identity_router.py  test_plugin_router.py  test_pos_router.py  test_retention_router.py  test_sso_router.py  test_stub_routers.py  test_tenant_router.py  test_vault_router.py  test_webhook_router.py
tests/unit/: test_access_enforcement.py  test_access_service.py  test_ai_gateway.py  test_audit_log.py  test_audit_retention.py  test_audit_store.py  test_auth.py  test_backup_service.py  test_common_config.py  test_common_security.py  test_compliance.py  test_crm_adapters.py  test_crm_service.py  test_csuite_plugin.py  test_email_verification.py  test_error_handlers.py  test_fraud_scoring.py  test_idempotency.py  test_identity_service.py  test_injection_detector.py  test_licensing.py  test_mfa_encryption.py  test_mfa_service.py  test_middleware.py  test_pagination.py  test_password_vault.py  test_patterns.py  test_permissions.py  test_phase2_identity.py  test_plugin_service.py  test_pos_service.py  test_rate_limit.py  test_red_team.py  test_redis.py  test_session_cleanup.py  test_settlement.py  test_sso_service.py  test_tenant_scoping.py  test_tenant_service.py  test_tool_guard.py  (+5 more)
(+80 files in other folders)
